# zinc

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  zinc.md
.github/workflows/: ci.yml  release.yml
crates/zinc-cli/: Cargo.toml  build.rs
crates/zinc-cli/src/: cli.rs  client.rs  config.rs  main.rs  sessions.rs
crates/zinc-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/zinc-daemon/: Cargo.toml
crates/zinc-daemon/src/: agent.rs  daemon.rs  lib.rs  main.rs  notify.rs  provider.rs  scrollback.rs
crates/zinc-daemon/tests/: integration.rs
crates/zinc-proto/: Cargo.toml
crates/zinc-proto/src/: lib.rs
docs/: keyboard-encoding-protocols-101.md  pty-and-daemon-101.md
