[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.8"
edition = "2021"
rust-version = "1.80.0"
license = "MIT"
repository = "https://github.com/ComeBertrand/zinc"
homepage = "https://github.com/ComeBertrand/zinc"

[workspace.dependencies]
zinc-proto = { path = "crates/zinc-proto", version = "0.2.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
libc = "0.2"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
toml = "0.8"
dirs = "6"
clap_complete = "4"
clap_mangen = "0.2"
