[package]
name = "zinc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal multiplexer for AI coding agents"
readme = "../../README.md"
keywords = ["ai", "agent", "terminal", "multiplexer", "claude"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "zinc"
path = "src/main.rs"

[dependencies]
zinc-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
vt100 = "0.15"

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
