[package]
name = "zinc-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zincd"
path = "src/main.rs"

[dependencies]
zinc-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
