[package]
name = "zinc-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Daemon for zinc, the agent multiplexer"
readme = "../../README.md"
keywords = ["ai", "agent", "terminal", "multiplexer", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
zinc-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
