[package]
name = "zinc-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Wire protocol types for zinc, the agent multiplexer"
readme = "../../README.md"
keywords = ["ai", "agent", "terminal", "multiplexer", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
